--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -821,6 +822,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 </div>
@@ -831,6 +833,7 @@
   <h3>GitHub Actions</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -1554,6 +1557,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -1561,6 +1565,7 @@
   <h3>Cloudflare Workers</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -2284,6 +2289,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -2291,6 +2297,7 @@
   <h3>Notion</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -3014,6 +3021,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3379,6 +3387,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3386,6 +3395,7 @@
   <h3>x</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
